// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generating bookmarks structure convertHTMLtoYAML should return a JSON reformatted by traversing parseHTMLtoJSON response 1`] = `
"label: Bookworms
description: These bookmarks were generated by a browser export
folders:
  - label: folder 1
    folders:
      - label: sub folder 1
        bookmarks:
          - label: sample url 1
            href: https://www.mywebsite.com
  - label: folder 2
    folders:
      - label: sub folder 2
        bookmarks:
          - label: sample url 2
            href: https://www.mywebsite.com
          - label: sample url 3
            href: https://www.mywebsite.com
      - label: sub folder 3
        bookmarks:
          - label: sample url 4
            href: https://www.mywebsite.com
          - label: sample url 5
            href: https://www.mywebsite.com
"
`;

exports[`generating bookmarks structure createBookmarks should generate YAML and write to disk from HTML file 1`] = `
"label: Bookworms
description: These bookmarks were generated by a browser export
folders:
  - label: folder 1
    folders:
      - label: sub folder 1
        bookmarks:
          - label: sample url 1
            href: https://www.mywebsite.com
  - label: folder 2
    folders:
      - label: sub folder 2
        bookmarks:
          - label: sample url 2
            href: https://www.mywebsite.com
          - label: sample url 3
            href: https://www.mywebsite.com
      - label: sub folder 3
        bookmarks:
          - label: sample url 4
            href: https://www.mywebsite.com
          - label: sample url 5
            href: https://www.mywebsite.com
"
`;

exports[`generating bookmarks structure generateBookwormJSON should return a JSON that matches bookworms schema 1`] = `
{
  "description": "These bookmarks were generated by a browser export",
  "folders": [
    {
      "folders": [
        {
          "bookmarks": [
            {
              "href": "https://www.mywebsite.com",
              "label": "sample url 1",
            },
          ],
          "label": "sub folder 1",
        },
      ],
      "label": "folder 1",
    },
    {
      "folders": [
        {
          "bookmarks": [
            {
              "href": "https://www.mywebsite.com",
              "label": "sample url 2",
            },
            {
              "href": "https://www.mywebsite.com",
              "label": "sample url 3",
            },
          ],
          "label": "sub folder 2",
        },
        {
          "bookmarks": [
            {
              "href": "https://www.mywebsite.com",
              "label": "sample url 4",
            },
            {
              "href": "https://www.mywebsite.com",
              "label": "sample url 5",
            },
          ],
          "label": "sub folder 3",
        },
      ],
      "label": "folder 2",
    },
  ],
  "label": "Bookworms",
}
`;

exports[`generating bookmarks structure parseHTMLtoJSON should return a JSON object parsed from the HTML 1`] = `
[
  {
    "children": [
      {
        "children": [
          {
            "href": "https://www.mywebsite.com",
            "label": "sample url 1",
            "type": "bookmark",
          },
        ],
        "label": "sub folder 1",
        "prevNode": "[Circular ~.Bookmarks.children.0.children.0]",
        "type": "folder",
      },
    ],
    "label": "folder 1",
    "prevNode": "[Circular ~.Bookmarks.children.0]",
    "type": "folder",
  },
  {
    "children": [
      {
        "children": [
          {
            "href": "https://www.mywebsite.com",
            "label": "sample url 2",
            "type": "bookmark",
          },
          {
            "href": "https://www.mywebsite.com",
            "label": "sample url 3",
            "type": "bookmark",
          },
        ],
        "label": "sub folder 2",
        "prevNode": "[Circular ~.Bookmarks.children.0.children.1]",
        "type": "folder",
      },
      {
        "children": [
          {
            "href": "https://www.mywebsite.com",
            "label": "sample url 4",
            "type": "bookmark",
          },
          {
            "href": "https://www.mywebsite.com",
            "label": "sample url 5",
            "type": "bookmark",
          },
        ],
        "label": "sub folder 3",
        "prevNode": "[Circular ~.Bookmarks.children.0.children.1]",
        "type": "folder",
      },
    ],
    "label": "folder 2",
    "prevNode": "[Circular ~.Bookmarks.children.0]",
    "type": "folder",
  },
]
`;

exports[`generating bookmarks structure traverseStructure should return a JSON reformatted by traversing parseHTMLtoJSON response 1`] = `
{
  "folders": [
    {
      "folders": [
        {
          "bookmarks": [
            {
              "href": "https://www.mywebsite.com",
              "label": "sample url 1",
            },
          ],
          "label": "sub folder 1",
        },
      ],
      "label": "folder 1",
    },
    {
      "folders": [
        {
          "bookmarks": [
            {
              "href": "https://www.mywebsite.com",
              "label": "sample url 2",
            },
            {
              "href": "https://www.mywebsite.com",
              "label": "sample url 3",
            },
          ],
          "label": "sub folder 2",
        },
        {
          "bookmarks": [
            {
              "href": "https://www.mywebsite.com",
              "label": "sample url 4",
            },
            {
              "href": "https://www.mywebsite.com",
              "label": "sample url 5",
            },
          ],
          "label": "sub folder 3",
        },
      ],
      "label": "folder 2",
    },
  ],
}
`;
